my-order page: fix calendar overlap

--- a/assets/src/less/my-order.less
+++ b/assets/src/less/my-order.less
@@ -42,6 +42,10 @@
   }
 }
 
+.daterangepicker .drp-calendar {
+  max-width: unset !important;
+}
+
 div.entry-content > table > thead > tr > th.order-number {
   cursor: pointer;
 
